--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ REACT_APP_API_URL=https://ku4zq.sse.codesandbox.io/
 REACT_APP_WEBSOCKET_API_URL=ws//ku4zq.sse.codesandbox.io/graphql
 
 # Front end URL
-REACT_APP_FRONTEND_URL=https://legram.netlify.app/
+REACT_APP_FRONTEND_URL=https://legrams.herokuapp.com/
